tests/test_input_files/good/test_good_array_31.punkt
main {
	const A = [1, 2, 3].
	println A[3].
}
