tests/test_input_files/bad/test_bad_array_23.punkt
main {
	var A = [[10], [2, 3], []].
}
